--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -35,13 +35,16 @@
       >
         {%- if section.blocks.first.settings.text != blank -%}
           {%- if section.blocks.first.settings.link != blank -%}
+            <p class="announcement-bar__message h5">
+              <span>{{ section.blocks.first.settings.text | escape }}</span>
+            </p>
             <a
               href="{{ section.blocks.first.settings.link }}"
               class="announcement-bar__link link link--text focus-inset animate-arrow"
             >
           {%- endif -%}
           <p class="announcement-bar__message h5">
-            <span>{{ section.blocks.first.settings.text | escape }}</span>
+            <span>{{ section.blocks.first.settings.text2 | escape }}</span>
             {%- if section.blocks.first.settings.link != blank -%}
               {{- 'icon-arrow.svg' | inline_asset_content -}}
             {%- endif -%}
@@ -243,14 +246,20 @@
     {
       "type": "announcement",
       "name": "t:sections.announcement-bar.blocks.announcement.name",
-      "settings": [
-        {
-          "type": "text",
-          "id": "text",
-          "default": "t:sections.announcement-bar.blocks.announcement.settings.text.default",
-          "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
-        },
-        {
+    "settings": [
+      {
+        "type": "text",
+        "id": "text",
+        "default": "t:sections.announcement-bar.blocks.announcement.settings.text.default",
+        "label": "t:sections.announcement-bar.blocks.announcement.settings.text.label"
+      },
+      {
+        "type": "text",
+        "id": "text2",
+        "default": "t:sections.announcement-bar.blocks.announcement.settings.text2.default",
+        "label": "t:sections.announcement-bar.blocks.announcement.settings.text2.label"
+      },
+      {
           "type": "url",
           "id": "link",
           "label": "t:sections.announcement-bar.blocks.announcement.settings.link.label"
